[package]
name = "payment-microservice-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "payments-server"
path = "src/server.rs"

[[bin]]
name = "payments-client"
path = "src/client.rs"


[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ['full'] }
tonic-reflection = "0.11"
tonic-web = "0.11"
tower-http = { version = "0.4", features = ["cors"] }

[build-dependencies]
tonic-build = "0.11"
